<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.4"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/tx_type"
        android:text="@string/received_btc_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
        android:textSize="16sp"
        android:layout_margin="@dimen/default_margin_small"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_width="@dimen/fill_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/tx_type_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/transaction_type_icon_description"
        app:layout_constraintHorizontal_bias="0.1"
        android:layout_margin="@dimen/default_margin_small"
        android:minWidth="@dimen/icon_min"
        android:minHeight="@dimen/icon_min"
        android:maxWidth="@dimen/icon_max"
        android:maxHeight="@dimen/icon_max"
        tools:background="@drawable/ic_circular_arrow_received"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/tx_value"
        android:text="@string/btc_value"
        app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
        app:layout_constraintHorizontal_bias="1"
        android:textSize="16sp"
        android:layout_margin="@dimen/default_margin_small"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/transaction_date"
        tools:text="01 Jan 2020"
        app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        android:textSize="16sp"
        android:layout_margin="@dimen/default_margin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>