<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/default_margin_big"
    tools:context=".ui.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_post_bar_layout"
        android:background="@android:color/white"
        app:titleEnabled="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/wallet_balance_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/balance_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/default_margin_medium"
                    app:layout_constraintVertical_bias="0"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    />

                <TextView
                    android:id="@+id/wallet_balance_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btc_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wallet_balance_text"
                    android:layout_marginStart="@dimen/default_margin_medium"
                    app:layout_constraintVertical_bias="0"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    />

                <ImageView
                    android:id="@+id/history_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_history"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wallet_balance_value"
                    app:layout_constraintEnd_toStartOf="@+id/history_textview"
                    app:tint="@color/colorPrimary"
                    android:layout_margin="@dimen/default_margin_medium"
                    android:contentDescription="@string/transaction_history_icon_description" />

                <TextView
                    android:id="@+id/history_textview"
                    android:layout_width="@dimen/fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_history_label"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/history_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wallet_balance_value"
                    android:layout_margin="@dimen/default_margin_medium"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin_large"
            android:indeterminateTint="@color/colorDarkPurple"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_of_transactions"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>